--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,81 @@
 <!--index.wxml-->
-<text>pages/test/test.wxml</text>
-<my-header/>
+<view class="box">
+  <view class="flow">
+    <image class="imgcs" src="../../img/hufu1.jpg"></image>
+    <!-- <image class="imgcs" src="../../img/hufu.png"></image> -->
+  </view>
+  <view class="flex f-tu">
+    <view class="fimg">
+      <image class="img" src="../../img/tubiao1.jpg"></image>
+      <text>洁面</text>
+    </view>
+    <view class="fimg">
+      <image class="img" src="../../img/tubiao2.jpg"></image>
+      <text>面霜</text>
+    </view>
+    <view class="fimg">
+      <image class="img" src="../../img/tubiao3.jpg"></image>
+      <text>乳液</text>
+    </view>
+    <view class="fimg">
+      <image class="img" src="../../img/tubiao4.jpg"></image>
+      <text>面膜</text>
+    </view>
+  </view>
+  <view class="f-main">
+    <view class="v-main v-text">
+      <text class="text1">水漾轻盈洗面奶</text>
+      <text class="text2">泡沫绵密</text>
+      <text class="text3">￥106元</text>
+      <button>点击抢购</button>
+    </view>
+    <view class="v-main">
+      <image src="../../img/tu1.jpg"></image>
+    </view>
+    <view class="v-main">
+      <image src="../../img/tu2.png"></image>
+    </view>
+    <view class="v-main v-text">
+      <text class="text1">焕彩睡眠面膜</text>
+      <text class="text2">补水保湿</text>
+      <text class="text3">￥770元</text>
+      <button>点击抢购</button>
+    </view>
+  </view>
+  <view class="flex">
+    <text>新品上市</text>
+    <view class="flex">
+      <view>
+        <image></image>
+        <text>水密码海藻水漾盈润细肤水</text>
+        <text></text>
+      </view>
+      <view>
+        <image></image>
+        <text></text>
+        <text></text>
+      </view>
+      <view>
+        <image></image>
+        <text></text>
+        <text></text>
+      </view>
+      <view>
+        <image></image>
+        <text></text>
+        <text></text>
+      </view>
+    </view>
+  </view>
+</view>
 
+
+
+<!-- <view class="flex">
+  <view class="divcs">
+    <my-header/>
+  </view> 
+  <view class="divcs">
+   <m-list/>
+  </view>
+</view> -->
