--- a/component/header/header.wxml
+++ b/component/header/header.wxml
@@ -1,7 +1,5 @@
 <!--component/hello/hello.wxml-->
-<text>
-</text>
-<view bindtap="show" wx:for="{{title}}" wx:for-item="log" wx:key>
+<view class="flex" bindtap="show" wx:for="{{title}}" wx:for-item="log" wx:key>
   {{log.name}}
   <view wx:for="{{log.txt}}" wx:key>
     {{item}}
