--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,63 @@
 /**index.wxss**/
+.box{
+  background-color: #f3f3f3;
+}
+.imgcs{
+  width: 100%;
+}
+.flow{
+  overflow: hidden;
+}
+.img{
+  width: 180rpx;
+  height: 180rpx;
+}
+.fimg{
+  width: 24%;
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+  padding-bottom: 20rpx;
+}
+.f-tu{
+  width: 100%;
+  justify-content: space-around;
+  background-color: #fff;
+  margin: 0;
+  padding: 0;
+}
+.v-main{
+  width: 50%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+.v-main image{
+  width: 100%;
+  height: 360rpx;
+}
+.v-text{
+  color: #fff;
+  background-color: #44c0f3;
+}
+.v-text button{
+  color: #fff;
+  background-color: #1ab6dd;
+  /* outline:none;
+  border: none; */
+}
+.text1{
+  font-size: 46rpx;
+}
+.text2{
+  font-size: 36rpx;
+}
+.text3{
+  font-size: 56rpx;
+}
+.f-main{
+  display: flex;
+  flex-flow: wrap;
+  margin: 30rpx 0;
+}
