--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,24 +4,9 @@
     <image class="imgcs" src="../../img/hufu1.jpg"></image>
     <!-- <image class="imgcs" src="../../img/hufu.png"></image> -->
   </view>
-  <view class="flex f-tu">
-    <view class="fimg">
-      <image class="img" src="../../img/tubiao1.jpg"></image>
-      <text>洁面</text>
-    </view>
-    <view class="fimg">
-      <image class="img" src="../../img/tubiao2.jpg"></image>
-      <text>面霜</text>
-    </view>
-    <view class="fimg">
-      <image class="img" src="../../img/tubiao3.jpg"></image>
-      <text>乳液</text>
-    </view>
-    <view class="fimg">
-      <image class="img" src="../../img/tubiao4.jpg"></image>
-      <text>面膜</text>
-    </view>
-  </view>
+
+  <m-hello/>
+
   <view class="f-main">
     <view class="v-main v-text">
       <text class="text1">水漾轻盈洗面奶</text>
@@ -42,31 +27,9 @@
       <button>点击抢购</button>
     </view>
   </view>
-  <view class="flex">
-    <text>新品上市</text>
-    <view class="flex">
-      <view>
-        <image src="../../img/tu01.jpg"></image>
-        <text>水密码滢亮皙白滋润柔肤水120ml（补水保湿护肤品保湿水 平衡锁水 控油爽肤）</text>
-        <text>￥75</text>
-      </view>
-      <view>
-        <image src="../../img/tu02.jpg"></image>
-        <text>水密码海藻水漾盈润细肤水120ml （爽肤水 补水保湿 提亮肤色）</text>
-        <text></text>
-      </view>
-      <view>
-        <image src="../../img/tu03.jpg"></image>
-        <text>水密码海藻盈润海洋清透洁面乳120g（洗面奶 泡沫细腻 锁水保湿）</text>
-        <text></text>
-      </view>
-      <view>
-        <image src="../../img/tu04.jpg"></image>
-        <text>水密码滢亮皙白去角质啫喱80g（温和清洁 改善毛孔 去死皮）</text>
-        <text></text>
-      </view>
-    </view>
-  </view>
+
+  <m-lele/>
+
 </view>
 
 
